# Course_6

./: .env_simple  messages.json  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_list.html
config/: settings.py  urls.py
mailings/: admin.py  apps.py  forms.py  models.py  service.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_clients_mailings_messages_owner_сhance_and_more.py  0002_clients_mailings_сhance.py  0003_alter_mailings_message_alter_mailings_owner.py  0003_alter_mailings_status.py  0004_mailings_e.py  0004_remove_mailings_message_messages_mailing.py  0005_remove_messages_mailing_mailings_message.py  0006_mailings_is_active.py  0007_alter_mailings_options.py
mailings/templates/: base.html
mailings/templates/mailings/: base.html  clients_form.html  mailings_confirm_delete.html  mailings_detail.html  mailings_form.html  mailings_list.html  messages_confirm_delete.html  messages_detail.html  messages_form.html  messages_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py  0004_user_user_blok.py
users/templates/: login.html  logout.html
users/templates/users/: user_form.html  user_list.html
