[tool.poetry]
name = "course-6"
version = "0.1.0"
description = ""
authors = ["Ksenia-Kostyuk <hatan2235@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
